add nebular theme

--- a/angular.json
+++ b/angular.json
@@ -36,6 +36,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "rebaseRootRelativeCssUrls": true,
             "outputPath": "dist/system-status-page",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -47,7 +48,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/roboto-fontface/css/roboto/roboto-fontface.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.css",
+              "node_modules/nebular-icons/scss/nebular-icons.scss",
+              "src/app/@theme/styles/styles.scss"
             ],
             "scripts": []
           },
